Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93188

tst_qqmlecmascript::gcCrashRegressionTest fails with ARM macOS 11 in Qt Declarative

XMLWordPrintable

    • macOS
    • 826b77c8cf (qt/qtdeclarative/dev) 826b77c8cf (qt/tqtc-qtdeclarative/dev) bbd031a3d2 (qt/qtdeclarative/6.4) 6c64a3c4ff (qt/qtdeclarative/6.3) bbd031a3d2 (qt/tqtc-qtdeclarative/6.4) 6c64a3c4ff (qt/tqtc-qtdeclarative/6.3)

      http://coin/coin/integration/qt/qt5/tasks/1619489249

      http://coin/coin/api/results/qt/qtdeclarative/f42d7f43a2cf6848f3f8cf8af6ac512093cc3e43/MacOSMacOS_11_00arm64MacOSMacOS_11_00arm64Clangqtci-macos-11.0-arm64InsignificantTests/f737320d03ea983d675dcdb0d5fa2bfaa709b538/test_1619491183/log.txt.gz

      agent:2021/04/27 02:35:28 build.go:379: 62: FAIL! : tst_qqmlecmascript::gcCrashRegressionTest() Compared values are not the same
      agent:2021/04/27 02:35:28 build.go:379: 62: Actual (process.exitCode()): 10
      agent:2021/04/27 02:35:28 build.go:379: 62: Expected (0) : 0
      agent:2021/04/27 02:35:28 build.go:379: 62: Loc: [/Users/qt/work/workspace/Coin_test/label/mac-arm64/work/qt/qtdeclarative/tests/auto/qml/qqmlecmascript/tst_qqmlecmascript.cpp(9459)]

        For Gerrit Dashboard: QTBUG-93188
        # Subject Branch Project Status CR V

            qtqmlteam Qt Qml Team User
            hehalmet Heikki Halmet
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: